# vault-core

./: .gitignore  build.gradle.kts  consumer-rules.pro
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/java/io/coremetrics/telemetry/sdk/runtime/internal/: CryptoEngine.kt  EncryptedPref.kt  JsonUtils.kt  KeyStoreEngine.kt  PrefKeys.kt  VaultManager.kt
